--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ a{
     margin-top: 200px;
     display: flex;
     justify-content: center;
+    color: #404040
 }
 
 .navlink{
@@ -76,7 +77,7 @@ a{
 }
 
 .linkhover:hover{
-    text-decoration: underline;
+    color: #ffffff;
 }
 
 .siteHeader_title{
