--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ a{
     margin-top: 200px;
     display: flex;
     justify-content: center;
-    color: #404040
 }
 
 .navlink{
@@ -77,7 +76,7 @@ a{
 }
 
 .linkhover:hover{
-    color: #ffffff;
+    color: #404040;
 }
 
 .siteHeader_title{
