--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a{
 }
 
 .links{
-    place-items: center;
+    margin-top: -24%;
     align-content: center;
     display: flex;
     justify-content: center;
