--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ a{
     transition: 1s;
 }
 
+.navbar{
+    backdrop-filter: blur(5px);
+}
+
 .projectsbutton{
     position: absolute;
     margin-top: 1%;
@@ -71,7 +75,7 @@ a{
 }
 
 .navlink{
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .linkhover:hover{
@@ -106,7 +110,8 @@ a{
 }
 
 .siteHeader_title:hover{
-    font-size: 70px;
+    transform: scale(1.2);
+    margin-left: 17.9%;
 }
 
 .siteHeader_lable{
