--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Special+Elite&display=swap');
 
 ::-webkit-scrollbar{
     width: 10px;
@@ -52,13 +52,35 @@ a{
 }
 
 .navbar{
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.266);
     backdrop-filter: blur(5px);
+    height: 7vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    z-index: 10;
 }
 
 .projectsbutton{
     position: absolute;
     margin-top: 1%;
     margin-left: 5%;
+}
+
+.landingPageHeader
+{
+    position: absolute;
+    display: inline;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    place-items: center;
+    align-content: center;
+    justify-content: center;
 }
 
 .homebutton{
@@ -91,7 +113,7 @@ a{
     user-select: none;
     pointer-events: none;
   
-    filter: brightness(80%);
+    filter: brightness(60%);
   
     /*additional tweaks for positioning, read more in the link above*/
     height: 100%;
@@ -101,14 +123,7 @@ a{
   }
 
 .siteHeader_title{
-    margin-top: 25%;
-    margin-left: 10%;
-    margin-bottom: 0%;
-    place-items: center;
-    align-content: center;
-    font-size: 60px;
-    display: flex;
-    justify-content: left;
+    font-size: 70px;
 }
 
 .siteHeader_image{
@@ -129,17 +144,11 @@ a{
 
 .siteHeader_title:hover{
     transform: scale(1.2);
-    margin-left: 17.9%;
 }
 
 .siteHeader_lable{
-    margin-top: 0%;
-    margin-left: 10%;
-    margin-bottom: 0%;
-    place-items: center;
-    align-content: center;
     font-size: 20px;
-    max-width: 40%;
+    font-weight: 100;
     color: #ffffff;
 }
 
