--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ a{
     display: inline;
     top: 50%;
     left: 50%;
+    right: 0;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
