--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ a{
 }
 
 .navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.266);
     backdrop-filter: blur(5px);
     height: 7vh;
@@ -106,10 +110,9 @@ a{
 .bg-video {
     position: absolute;
     display: inline;
-    top: 50vh;
-    left: 50vw;
+    top: 0;
+    left: 0;
     right: 0;
-    transform: translate(-50vw, -50vh);
     background-size: cover;
     background: no-repeat center;
     user-select: none;
@@ -118,10 +121,12 @@ a{
     filter: brightness(60%);
 
     /*additional tweaks for positioning, read more in the link above*/
-    height: 100%;
-    width: 177.77777778vh; /* 100 * 16 / 9 */
-    min-width: 100%;
-    min-height: 56.25vw; /* 100 * 9 / 16 */
+    height: auto;
+    width: 100vw;
+    /*height: 100%;*/
+    /*width: 177.77777778vh; /* 100 * 16 / 9 */
+    /*min-width: 100%;
+    /*min-height: 56.25vw; /* 100 * 9 / 16 */
   }
 
 .siteHeader_title{
