--- a/style.css
+++ b/style.css
@@ -76,10 +76,12 @@ a{
 .landingPageHeader
 {
     position: relative;
-    display: inline;
-    top: 50%;
-    left: 50%;
-    right: 0;
+    top: 0;
+    left: 0;
+    right: 100vw;
+    bottom: 100vh;
+    height: 100vh;
+    width: 100vw;
     text-align: center;
     place-items: center;
     align-content: center;
