--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ a{
     /*min-height: 56.25vw; /* 100 * 9 / 16 */
   }
 
-  @media (orientation: portrait)
+  @media (max-width: 1000px)
   {
     .bg-video {
         height: 100vh;
