--- a/style.css
+++ b/style.css
@@ -135,6 +135,10 @@ a{
         height: 100vh;
         width: auto;
     }
+
+    .navbar{
+        height: 10vh;
+    }
   }
 
 .siteHeader_title{
