--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ a{
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.266);
     backdrop-filter: blur(5px);
     height: 7vh;
+    width: 100vw;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
@@ -129,7 +130,7 @@ a{
     /*min-height: 56.25vw; /* 100 * 9 / 16 */
   }
 
-  @media (max-width: 1500px)
+  @media (max-width: 1279px)
   {
     .bg-video {
         height: 100vh;
