--- a/style.css
+++ b/style.css
@@ -1,21 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Special+Elite&display=swap');
 
-::-webkit-scrollbar{
-    width: 10px;
+@media (prefers-color-scheme: dark)
+{
+:root
+{
+    color-scheme: dark;
+}
 }
 
-::-webkit-scrollbar-track {
-    background: #ffffff00; 
-}
-
-::-webkit-scrollbar-thumb{
-    border-radius: 5px;
-    background-color: #a3a3a3;
-}
-
-::-webkit-scrollbar-thumb:hover{
-    background-color: #ffffff;
-}
 
 body{
     background-color: #131316;
@@ -72,19 +64,6 @@ a{
     position: absolute;
     margin-top: 1%;
     margin-left: 5%;
-}
-
-.landingPageHeader
-{
-    position: static;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    text-align: center;
-    place-items: center;
-    align-content: center;
-    justify-content: center;
 }
 
 .homebutton{
