--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 @media (orientation: landscape)
 {
     body{
-        max-width: clamp(0px, 90vw ,1000px); 
+        max-width: clamp(0px, 90vw ,1500px); 
     }
 }
 
@@ -48,7 +48,7 @@ h1,h2,h3 {
 .footer {
     text-align: center;
     align-items: center;
-    max-width: clamp(0px, 80vw ,1000px);
+    max-width: clamp(0px, 80vw ,1500px);
 }
 
 .contact{
@@ -102,6 +102,7 @@ h1,h2,h3 {
 
 .disabled:hover{
     color: rgb(57, 57, 57);
+    cursor: pointer;
 }
 
 .subtitle {
