--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-weight: 400;
     font-style: normal;
     background-color: #121212;
-    color: #ffffff; 
+    color: #111111; 
     padding: 0 10px;
     height: max-content;
     overflow-x: hidden;
