--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background-color: #121212;
-    color: #111111; 
+    background-color: #111111;
+    color: #ffffff; 
     padding: 0 10px;
     height: max-content;
     overflow-x: hidden;
