--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-
 body {
-    margin: 40px auto;
-    line-height: 1.6; 
     font-size: clamp(1rem, 1.2rem, 3rem);
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
@@ -9,14 +6,25 @@ body {
     font-style: normal;
     background-color: #000000;
     color: #ffffff; 
+    margin: 0px;
+}
+
+.main-content {
+    margin: 40px auto;
+    line-height: 1.6; 
     padding: 0 10px;
     height: max-content;
     overflow-x: hidden;
 }
+
 @media (orientation: landscape)
 {
-    body{
+    .main-content{
         max-width: clamp(0px, 90vw ,1500px); 
+    }
+
+    .hamburger{
+        display: none;
     }
 }
 
@@ -29,9 +37,22 @@ body {
 
     body{
         font-size: calc(1rem + 2vw);
+    }
+
+    .main-content{
         max-width: 90vw; 
     }
+
+    header{
+        max-width: 90vw;
+    }
+
+    .hamburger{
+        width: 10vw;
+        height: 10vw;
+    }
 }
+
 
 a:link {
     color: cornflowerblue;
@@ -45,6 +66,8 @@ h1,h2,h3 {
     line-height: 1.2;
 }
 
+h3>a { text-decoration: none; }
+
 .footer {
     text-align: center;
     align-items: center;
@@ -54,7 +77,7 @@ h1,h2,h3 {
 .contact{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     text-align: center;
     align-self: flex-start;
     flex: auto;
@@ -66,6 +89,20 @@ h1,h2,h3 {
     }
 }
 
+.navbar{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    align-self: flex-start;
+    flex: auto;
+    background-color: #202020;
+    overflow: hidden;
+    width: 100vw;
+    max-width: 100%;
+}
 
 .tabs{
     display: flex;
@@ -73,12 +110,17 @@ h1,h2,h3 {
     flex-wrap: wrap;
     justify-content: space-evenly;
     text-align: center;
-    align-self: flex-start;
     flex: auto;
+    max-width: fit-content;
+    align-items: center;
 }
 
 @media (orientation: portrait)
 {
+    .tabs{
+    display: none;
+    }
+
     .contact{
     display: flex;
     flex-direction: column;
@@ -91,7 +133,7 @@ h1,h2,h3 {
 }
 
 .tab{
-    width: 130px;
+    width: 200px;
 }
 
 .disabled{
@@ -101,32 +143,14 @@ h1,h2,h3 {
 .disabled:hover{
     transform: scale(1.2);
     transition: all 50ms;
+    color: rgb(57, 57, 57);
+    cursor: pointer;
 }
 
 .hidden{
     display: none;
 }
 
-.disabled:hover{
-    color: rgb(57, 57, 57);
-    cursor: pointer;
-}
-
 .subtitle {
     color: rgb(186, 186, 186);
-}
-
-/*Stickers*/
-.stickers{
-    transform: translate(-50%, -50%);
-    position: absolute;
-    z-index: -100;
-    width: 1920;
-    height: 1080;
-}
-
-.dinoSticker{
-    transform: scale(0.2) rotate(-20deg) translate(-200px, 900px);
-    outline-style: solid;
-    outline: 10px solid #ffffff;
 }
