--- a/style.css
+++ b/style.css
@@ -43,10 +43,6 @@ body {
         max-width: 90vw; 
     }
 
-    header{
-        max-width: 90vw;
-    }
-
     .hamburger{
         width: 10vw;
         height: 10vw;
@@ -96,12 +92,9 @@ h3>a { text-decoration: none; }
     justify-content: space-around;
     text-align: center;
     align-items: center;
-    align-self: flex-start;
-    flex: auto;
     background-color: #202020;
     overflow: hidden;
-    width: 100vw;
-    max-width: 100%;
+    width: 100%;
 }
 
 .tabs{
